--- a/src/modulo-03-html-css/exercicios/Exe02/main.css
+++ b/src/modulo-03-html-css/exercicios/Exe02/main.css
@@ -42,7 +42,7 @@ body {
             min-height: 550px;
         }
         
-        .conteudo > .imagem-descricao {
-            float: left;
-            margin-right: 15px;
-        }
+            .corpo > .imagem-descricao {
+                float: left;
+                margin-right: 15px;
+            }
