--- a/src/modulo-03-html-css/exercicios/Exe03/desafio-seletor-avancado.css
+++ b/src/modulo-03-html-css/exercicios/Exe03/desafio-seletor-avancado.css
@@ -1,12 +1,12 @@
-.box p:first-of-type { 
+.box > p:first-child { 
    color: pink;
 }
 
-.box p:last-of-type { 
+.box > p:last-child { 
    color: blue;
 }
 
-.box p:nth-of-type(4) {
+.box > p:nth-of-type(4) {
    background: yellow;
 }
 
