--- a/src/modulo-03-html-css/exercicios/Exe05/erico.css
+++ b/src/modulo-03-html-css/exercicios/Exe05/erico.css
@@ -9,6 +9,7 @@
 
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: url("http://www.pageresource.com/wallpapers/wallpaper/digimon-adventure-group-graphics-code_184125.jpg") center 0;
 }
 
 header {
@@ -135,6 +136,7 @@ header {
     footer,
     header {
         box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.5);
+        background: rgba(238,238,238,0.8);
     }
     
     .content .personagens:hover,
