--- a/src/modulo-03-html-css/exercicios/ExeUltimate/main.css
+++ b/src/modulo-03-html-css/exercicios/ExeUltimate/main.css
@@ -1,6 +1,93 @@
 
+/*
+ * Page Styles
+ */
+ 
+ body {
+     background: #E4E9F0;
+ }
+ 
+ .content {
+    position: relative;
+    top: -20px;
+    margin-left: 250px;
+    background: #E4E9F0;
+ }
+ 
+    .content > .page-header {
+        margin: 0 0 20px;
+        padding: 20px;
+        background: #fff;
+        box-shadow: 0 .5px 10px .1px rgba(0,0,0,0.1);
+    }
+    
+        .page-header > h1 {
+            
+        }
+    
+        .page-header > h4 {
+            display: inline;
+        }
+    
+        .page-header > .breadcrumb {
+            float: right;
+            background: transparent;
+        }
+            .page-header > .breadcrumb li {
+            
+            }
+            
+                .page-header > .breadcrumb li > a {
+                    color: #333;
+                }
+                
+                .page-header > .breadcrumb li.active > a {
+                    color: #888;
+                }
+        
+            .page-header > .breadcrumb > li + li:before {
+                content: "\02C3";
+            }
+        
+    .content > .container {
+        border-radius: 5px;
+        background: #fff;
+        color: #454545;
+    }
+    
+        .content > .container > .title {
+            margin: 25px 0 30px;
+            font-weight: 500;
+            color: #A59999;            
+        }
+        
+        .content > .container > form {
+            padding-bottom: 20px;
+        }
+        
+            .container > form > .form-group {
+                margin: 10px 0;
+            }        
+            
+                .container > form > .form-group label {
+                    text-transform: uppercase;
+                    font-weight: 600;
+                }
+                
+                .container > form > .form-group label strong {
+                    color: #999;
+                    font-weight: 500;
+                }
+        
+    .content .form-control {
+        background: #FAFAFA;
+        border: 1px solid #eee;
+    }
 
-/* navbar */
+
+/*
+ * Navbar styles
+ */
 .navbar {
     height: 62px;
     background: #fff;
@@ -60,7 +147,7 @@
                     text-transform: uppercase;
                 }
                 
-                .navbar-right > li > .imagem-usuario {
+                .navbar-right > li > .user-picture {
                     position: relative;
                     width: 60px;
                     height: 45px;
@@ -72,15 +159,128 @@
                 padding-left: 10px;
             }
         
-                .navbar-collapse.collapse.in > .navbar-right > li > .imagem-usuario {
+                .navbar-collapse.collapse.in > .navbar-right > li > .user-picture {
                     display: none;
                 }
                 
-/* sidebar */
+/*
+ * Sidebar styles
+ */
 .sidebar {
+    position: absolute;
+    float: left;
+    width: 250px;
     height: 100%;
-    background: #2C2C31;
+    top: 0;
+    padding-top: 62px;
+    z-index: 999;
+    background: #2C2C31;    
+    box-shadow: .5px 0 10px .1px rgba(0,0,0,0.1);
 }
+
+    .sidebar > .info {   
+        position: relative;     
+        background: #35353B;
+        height: 140px;
+        padding: 10px;
+    }
+    
+        .sidebar > .info > .user-picture {
+            float: left;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;            
+        }
+        
+        .sidebar > .info > .user-description { 
+            float: left;
+            padding: 10px;
+        }
+        
+            .sidebar > .info > .user-description > .name {
+            }
+            
+            .sidebar > .info > .user-description > .mail {
+            }
+            
+            .sidebar > .info > .user-description > .name,
+            .sidebar > .info > .user-description > .mail {
+                font-size: 14px;
+                margin: 0;                                
+                color: #aaa;
+            }
+            
+            .sidebar > .info > .user-description > .name:hover,
+            .sidebar > .info > .user-description > .mail:hover {
+                color: #ccc;
+            }
+        
+        .sidebar > .info > .icons {
+            position: absolute;
+            padding-left: 0;
+            bottom: 0;
+        }   
+         
+            .sidebar > .info > .icons > li {
+                display: inline-block;
+                margin: 20px;
+            }       
+    
+    .sidebar > .menu {}
+        
+        .sidebar > .menu > .menu-list {}
+        
+            .sidebar > .menu > .menu-list .title {
+                font-size: 15px;
+                font-weight: 100;
+                margin: 0;
+                padding: 15px 20px;
+                text-transform: uppercase;
+                color: #666;            
+            }
+            
+            .sidebar > .menu > .menu-list .sub-menu {}
+        
+                .sidebar > .menu > .menu-list .sub-menu > li {
+                    position: relative;
+                    padding: 15px 20px;
+                    color: #888;                      
+                }
+                
+                    .sidebar > .menu > .menu-list .sub-menu > li i {
+                        margin-right: 10px;
+                    }
+                    
+                .sidebar > .menu > .menu-list .sub-menu > li::after {
+                    content: "\02C3";
+                    position: absolute;
+                    right: 20px;
+                    font-weight: bold;
+                }
+                    
+                .sidebar > .menu > .menu-list .sub-menu > li.active {
+                    background: #3A3B44;
+                }
+                
+                    .sidebar > .menu > .menu-list .sub-menu > li.active a {
+                        color: #5F9897;
+                    }
+                
+                .sidebar > .menu > .menu-list .sub-menu > li:hover {
+                    color: #aaa;
+                }
+            
+    .sidebar a {
+        color: #888;
+        text-decoration: none;
+    }     
+    .sidebar a:hover {
+        color: #aaa;
+    }
+    
+    .sidebar ul {
+        padding-left: 0;
+    }
 
 
 
@@ -117,4 +317,9 @@
 
 /* maximo xs (extra small) */
 @media (max-width: 480px) {   
+}
+
+/* mixins */
+.clear-fix {
+    clear: both;
 }
