refactor(ExeStreetFighter): melhorado o exercicio do street fighter.

--- a/src/modulo-03-html-css/exercicios/Exe02/main.css
+++ b/src/modulo-03-html-css/exercicios/Exe02/main.css
@@ -46,3 +46,32 @@ body {
                 float: left;
                 margin-right: 15px;
             }
+            
+/* maximo md (medium) */
+@media (max-width: 992px) {
+    .conteudo {
+        width: 100%;
+    }   
+}
+
+/* maximo sm (small) */
+@media (max-width: 768px) {
+    .corpo > .descricao {
+        float: left;
+    }
+}
+
+/* maximo xs (extra small) */
+@media (max-width: 480px) {
+    .menu > .item {
+        display: block;
+    }
+    .corpo > .imagem-descricao {
+        width: 100%;
+    }   
+}
+
+/* mixins */
+.clear-fix {
+    clear: both;
+}
