feat(ExeFinal): add bootstrap ao exercicio.

--- a/src/modulo-04-javascript/exercicios/ExeFinal/cavaleiros.css
+++ b/src/modulo-04-javascript/exercicios/ExeFinal/cavaleiros.css
@@ -1,31 +1,20 @@
 .lista-de-cavaleiros {
-    list-style: none;
-    padding: 0;
+    
 }
 
     .lista-de-cavaleiros > .cavaleiro {
-        display: inline-block;
+        height: 207px;
     }
+    
+        .cavaleiro > img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+        
+        .cavaleiro:nth-child(6n+1) {
+            clear: both;
+        }
     
 .cadastro-de-cavaleiros {}
 
-    form > .grupo {
-        display: table;
-        margin: 10px;
-    }
     
-        .grupo > label {
-            
-        }
-    
-        .grupo > input, .grupo > select {
-            margin: 5px;
-            padding: 2px;
-            border-radius: 3px;
-            border: 1px solid #bbb;
-        }
-        
-        .grupo > button {
-            margin: 0 auto;
-            text-align: center;
-        }
