--- a/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/Shared/_Layout.cshtml
@@ -14,8 +14,7 @@
 <body>
     <div class="menu">
         <span class="item">
-            @Html.ActionLink("Inicio", "Index", "StreetFighter", new { style = "border: 1px solid yellow;", @class = "menu-link" })            
-            @*<a href="~/StreetFighter">Início</a>*@
+            @Html.ActionLink("Inicio", "Index", "StreetFighter")
         </span>
         <span class="item">
             <a href="https://www.google.com.br/search?q=Street+Fighter&tbm=nws">Noticia</a>
@@ -24,7 +23,7 @@
             <a href="ficha-tecnica.html#conteudo">Ficha Técnica</a>
         </span>
         <span class="item">
-            <a href="sobre.html#conteudo">Sobre</a>
+            @Html.ActionLink("Sobre", "Sobre", "StreetFighter")
         </span>
     </div>
 
@@ -33,7 +32,7 @@
             <h1>@ViewBag.Title</h1>
         </div>
 
-        <div class="corpo">
+        <div class="corpo medio">
             @RenderBody()
         </div>
     </div>
