feat(Exe02): feito exercicio da aula 03

--- a/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             <a href="https://www.google.com.br/search?q=Street+Fighter&tbm=nws">Noticia</a>
         </span>
         <span class="item">
-            <a href="ficha-tecnica.html#conteudo">Ficha Técnica</a>
+            @Html.ActionLink("Inicio", "FichaTecnica", "StreetFighter")
         </span>
         <span class="item">
             @Html.ActionLink("Sobre", "Sobre", "StreetFighter")
