--- a/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/StreetFighter/Sobre.cshtml
+++ b/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/StreetFighter/Sobre.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Érico</h2>
 
-<img src="~/Content/Imagens/minha_foto.jpg" class="imagem-descricao" alt="minha foto"/>
+<img src="@Model.Foto" class="imagem-descricao" alt="minha foto"/>
 
 <p class="descricao">
     <strong>Nome completo:</strong> @Model.Nome<br>
