refactor(StreetFighter): melhorado url das imagens

--- a/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/Desafio/Index.cshtml
+++ b/src/modulo-05-dotnet/exercicios/MVC/MVC/Views/Desafio/Index.cshtml
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Desafio Zen Garden</title>
-    <link rel="stylesheet" href="@string.Format("/Content/Estilos/{0}.css", ViewBag.cssAtual)">
+    <link rel="stylesheet" href="@Url.Content(ViewBag.cssAtual)">
 </head>
 <body>
 <header>
