--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Pedido/Novo.cshtml
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Pedido/Novo.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Novo";
 }
 
+@section Styles {
+    <link href="~/Content/Datepicker/css/datepicker.min.css" rel="stylesheet" />
+}
+
 <h2>Novo Pedido</h2>
 
 
@@ -14,10 +18,11 @@
     <div class="form-horizontal">        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
             @Html.LabelFor(model => model.NomeProduto, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NomeProduto, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.NomeProduto, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NomeProduto, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ValorVenda, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorVenda, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.ValorVenda, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ValorVenda, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,18 +38,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataEntrega, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.EditorFor(model => model.DataEntrega, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DataEntrega, "", new { @class = "text-danger" })*@
-                <div class="input-append date">
-                    <input type="text" class="span2"><span class="add-on"><i class="icon-th"></i></span>
-                </div>
+                @Html.TextBoxFor(model => model.DataEntrega, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DataEntrega, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.NomeCliente, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NomeCliente, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.NomeCliente, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NomeCliente, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,7 +54,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Cidade, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Cidade, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.Cidade, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Cidade, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,14 +62,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Estado, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Estado, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.Estado, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button class="btn btn-primary btn-lg">Criar Pedido</button>
             </div>
         </div>
     </div>
@@ -76,7 +78,10 @@
 @*<div>
     @Html.ActionLink("Back to List", "Index")
 </div>*@
-<script src="~/scripts/jquery-2.2.3.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-<script src="~/scripts/lojaNinja.js"></script>
+
+@section Scripts {
+    <script src="~/scripts/jquery.validate.min.js"></script>
+    <script src="~/scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/scripts/Datepicker/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/scripts/lojaNinja.js"></script>
+}
