--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
         </footer>
     </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/scripts/jquery-2.2.3.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    @RenderSection("Scripts", false)
 </body>
 </html>
