--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Pedido/Salvar.cshtml
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Pedido/Salvar.cshtml
@@ -90,5 +90,5 @@
     <script src="~/scripts/jquery.validate.min.js"></script>
     <script src="~/scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/scripts/Datepicker/js/bootstrap-datepicker.min.js"></script>
-    <script src="~/scripts/Site/default.js"></script>
+    <script src="~/scripts/Site/pedido.js"></script>
 }
