--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
 
     <script src="~/scripts/jquery-2.2.3.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/scripts/Site/default.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
